syntax = "proto3";

package com.foo.protoPackage;

message TestHello {
    string greetings = 1;
}
